# GodOS

./: .gitignore  OS_base.md  README.md
bare_os/: .gitignore  Cargo.toml  Makefile  addressspace.puml  build.rs  fork.puml  operating system.puml  system.puml
bare_os/.cargo/: config
bare_os/copy/: batch.rs  console.rs  link.ld  link_app  print.rs
bare_os/src/: batch.rs  config.rs  contexts.rs  interrupts.rs  lang_items.rs  lib.rs  link_app.S  linker-qemu.ld  linker.ld  linker_qemu.ld  loader.rs  main.rs  panic.rs  print.rs  sbi.rs  timer.rs
bare_os/src/driver/: mod.rs
bare_os/src/driver/block/: mod.rs  virtio_block_dev.rs
bare_os/src/driver/gpu/: mod.rs
bare_os/src/file/: ftable.rs  inode.rs  mail.rs  mod.rs  pipe.rs  stdio.rs
bare_os/src/mm/: FrameAllocator.rs  address.rs  frame_allocator.rs  memory_set.rs  mod.rs  page_table.rs
bare_os/src/my_struct/: MyRefCell.rs  mod.rs
bare_os/src/sync/: mod.rs  monitor.rs  mutex.rs  semaphore.rs
bare_os/src/syscall/: exit.rs  file.rs  mod.rs  multhread.rs  process.rs  sync.rs  write.rs
bare_os/src/system_allocator/: buddy.rs  bump_allocator.rs  common.rs  fixed_block.rs  fixed_size.rs  linked_list.rs  mod.rs
bare_os/src/task/: context.rs  id.rs  manager.rs  mod.rs  pid.rs  process.rs  processor.rs  switch.asm  switch.rs  task.rs
bare_os/src/tests/: mod.rs  print_test.rs
bare_os/src/trap/: context.rs  mod.rs  trap.asm
blog_os/: Cargo.toml
blog_os/.cargo/: config
blog_os/src/: interrupts.rs  lib.rs  main.rs  serial.rs  test.ld  vga_buffer.rs
blog_os/tests/: basic_boot.rs
doc/: CPU异常.md  OS_base.md  README.md  分时处理.md  动态内存分配与虚拟地址空间.md  地址空间.md  实验目标前置知识.md  章节任务.md  进程管理.md
easyfs/: Cargo.toml
easyfs/src/: bitmap.rs  block_cache.rs  block_dev.rs  config.rs  dir_entry.rs  disknode.rs  efs.rs  inode.rs  layout.rs  lib.rs  vfs.rs
fs-test/: Cargo.toml  Makefile
fs-test/src/: main.rs
func-test/: Cargo.toml
func-test/src/: common.rs  config.rs  lib.rs  linked_list.rs  main.rs  my_buddy.rs  (+1 more)
user/: Cargo.toml  Makefile  build.py
(+12 files in other folders)
