[package]
name = "bare_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
spin = "0.9.2"
uart_16550 = "0.2.15"
bitflags = "1.3.2"

[dependencies.riscv]
version = "0.7.0"
feature=["inline-asm"]


[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"] #禁止链接标准库

[features]
default = []
board_qemu = []
ERROR = []
WARN = []
INFO = []
DEBUG = []
TRACE = []