[package]
name = "blog_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile = "0.2.6"
bootloader = "0.9.3"
spin = "0.9.2"
# 使用 `cargo build` 编译时需要的配置
[profile.dev]
panic = "abort" # 禁用panic时栈展开

# 使用 `cargo build --release` 编译时需要的配置
[profile.release]
panic = "abort" # 禁用 panic 时栈展开


[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"] #禁止链接标准库


[package.metadata.bootimage]
build-command = ["xbuild"]